# InverseDynamicsWithForcePlate

./: .gitignore  README.md  jit_tmp59yuln.c  setup_deps.sh
AmtiForcePlate/: CMakeLists.txt  DataStreamClientFacade.cpp  DataStreamClientFacade.hpp  ForcePlateData.cpp  ForcePlateDataAcquisition.cpp  ForcePlateDataAcquisition.hpp  ForcePlateDataFrame.cpp  Main.cpp  MarkerDataAcquisition.cpp  MarkerGlobalTranslationData.cpp  ViconDataAcquisition.cpp  compile_for_Vicon_1.10.ps1  compile_for_Vicon_1.10.sh  compile_for_Vicon_1.12.sh  compile_for_Vicon_1.13.ps1
AmtiForcePlate/ViconLib1.12/: libraries.txt
AmtiForcePlate/outdatedBuildScripts/: compile_for_Vicon_1.10.sh  compile_for_Vicon_1.12.ps1  compile_for_Vicon_1.12.sh
AmtiForcePlate/publicInclude/: ForcePlateData.hpp  ForcePlateDataAcquisition.hpp  ForcePlateDataFrame.hpp  MarkerDataAcquisition.hpp  MarkerGlobalTranslationData.hpp  ViconDataAcquisition.hpp
Data/2023_08_04_ur5e_dynamic/: end_position_to_dynamic_random  start_position_to_dynamic_random
Data/20Punkte_24.07.2023_1/CSV/: P14_FP_SMA.csv  P16_FP_SMA.csv  P2_FP_SMA.csv  P6_FP_SMA.csv  P7_FP_SMA.csv
Data/20Punkte_24.07.2023_1/CSV_MARKERS_ALL/: P17_MARKERS_ALL.csv  P18_MARKERS_ALL.csv  P19_MARKERS_ALL.csv  P20_MARKERS_ALL.csv  P4_MARKERS_ALL.csv  P5_MARKERS_ALL.csv  P6_MARKERS_ALL.csv  P7_MARKERS_ALL.csv
Data/20Punkte_24.07.2023_1/folded_CoP_FP_SMA/: folded_P11_FP_SMA.csv  folded_P12_FP_SMA.csv  folded_P13_FP_SMA.csv  folded_P16_FP_SMA.csv  folded_P17_FP_SMA.csv  folded_P18_FP_SMA.csv  folded_P19_FP_SMA.csv  folded_P20_FP_SMA.csv  folded_P4_FP_SMA.csv  folded_P5_FP_SMA.csv  folded_P7_FP_SMA.csv
ForcePlateDataAcquisition/: ForcePlateDataAcquisition.sln
ForcePlateDataAcquisition/ForcePlateDataAcquisition/: ForcePlateDataAcquisition.cpp  ForcePlateDataAcquisition.vcxproj  ForcePlateDataAcquisition.vcxproj.filters
Geometry/: bland-altman.py  calculate_cop.py  define_line.py  define_plane.py  find_line_plane_intersection.py
Scripts/Common/: Bland_Altman_Plot.py  Bland_Altman_Plot_2.py  CoPs_force_plate.py  ForcePlate_CoP.py  FrameNumber_filter.py  Inverse_dynamics_bottom_up.py  Inverse_dynamics_node.py  Inverse_dynamics_rnea.py  Inverse_dynamics_top_down.py  Line_plane_intersection.py  Plot_sizes.py  Rosbag_extractor.py  Simple_moving_average.py  Utils.py  Valid_msgs_filter.py  geometry_classes.py  get_tip_coordinates.py  one_euro_filter.py  ur5_mod.urdf  ur5e.urdf
Scripts/Common/Ros_msg_types/: __init__.py
Scripts/Pipelines/: BAP__CoP_force_plate__CoP_chisel_intersection.py  BAP__CoP_force_plate__CoP_chisel_tip_marker.py  BAP__CoP_force_plate__CoP_rectangle_with_sma.py  BAP__CoP_force_plate__CoP_rectangle_without_sma.py  BAP__Inverse_dynamics.py  Inverse_dynamics.py  Monte_Carlo.py  Test.py  Time_Series.py
Temp/: 17.05.2023.txt  Fragen04.05.2023.txt
ViconDataAcquisition/: CMakeLists.txt  DataStreamClientFacade.cpp  ForcePlateData.cpp  ForcePlateDataAcquisition.cpp  Main.cpp  MarkerDataAcquisition.cpp  MarkerGlobalTranslationData.cpp
ViconDataAcquisition/outdatedBuildScripts/: compile_for_Vicon_1.10.sh
ViconDataAcquisition/publicInclude/: ForcePlateDataAcquisition.hpp  MarkerDataAcquisition.hpp  MarkerGlobalTranslationData.hpp
catkin_ws/: .gitignore  CoP_comparison.txt  CoPs_and_ForcePlates.xml  JointParameters.xml  forcePlate_and_robotData.sh  forcePlate_and_robotData.xml  forces_comparison.sh  forces_comparison.xml  measure.sh  measure_CoP.sh  plotjuggler_all.xml  rosbag_CoP_data_filter.sh  run_my_nodes.sh  spatial_force_comparison_2023_08_24.sh  spatial_force_comparison_2023_08_24.xml  torque_comparison.sh  torque_comparison.xml
catkin_ws/20Punkte_24.07.2023_1/: P1_MARKERS_ALL.csv
catkin_ws/20Punkte_24.07.2023_1/CSV/: P10_FP_SMA.csv  P11_FP_SMA.csv  P12_FP_SMA.csv  P13_FP_SMA.csv  P15_FP_SMA.csv  P17_FP_SMA.csv  P18_FP_SMA.csv  P19_FP_SMA.csv  P1_FP_SMA.csv  P20_FP_SMA.csv  P3_FP_SMA.csv  P4_FP_SMA.csv  P5_FP_SMA.csv  P8_FP_SMA.csv  P9_FP_SMA.csv
catkin_ws/20Punkte_24.07.2023_1/CSV_MARKERS_ALL/: P10_MARKERS_ALL.csv  P11_MARKERS_ALL.csv  P12_MARKERS_ALL.csv  P13_MARKERS_ALL.csv  P14_MARKERS_ALL.csv  P15_MARKERS_ALL.csv  P2_MARKERS_ALL.csv  (+4 more)
catkin_ws/Auswertung/: Get_folded_CoP_FP_SMA.sh  Get_folded_two_points.sh  find_line_plane_intersection.py  fold_force_plate_data.py  fold_marker_data.py
catkin_ws/install/: .rosinstall  _setup_util.py  local_setup.sh  setup.sh
catkin_ws/rosbags/: 2023-07-14-16-45-30.bag  2023-07-14-16-45-49.bag  2023-07-14-16-46-10.bag  2023-07-14-16-53-55.bag  2023-07-14-16-54-18.bag  2023-07-14-16-55-02.bag
catkin_ws/src/: my_robot_calibration.yaml
pybullet/: ur5e.urdf  ur5eOwn.py
urdf2casadi/: README.md  ReadMe.txt  jit_tmp5timvr.c  jit_tmpg9thuh.c  jit_tmpicdxl4.c  jit_tmpksuf48.c  jit_tmptjpjky.c  jit_tmpusa56b.c  output.txt  ur5_example.py
urdf2casadi/ur5e/: ur5_mod.urdf
urdf2casadi/urdf2casadi/: urdfparser.py  urdfparser_extension.py
(+153 files in other folders)
